force-app/main/default/objects/TASKRAY__trContributor__c/TASKRAY__trContributor__c.object-meta.xml
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that stores project team members.</description>
    <label>TaskRay Team</label>
    <nameField>
        <label>TaskRay Team Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>