force-app/main/default/objects/TASKRAY__trContributor__c/fields/TASKRAY__GroupId__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__GroupId__c</fullName>
    <description>The Id for a salesforce group, unfortunately lookup relationships to groups are not available</description>
    <label>Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>