force-app/main/default/objects/TASKRAY__trContributor__c/fields/TASKRAY__trInitialAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trInitialAccessLevel__c</fullName>
    <description>The initial access for a contributor. Only applies with projects set to private and on creation of share.</description>
    <label>Initial Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Edit</fullName>
                <color>#DDDDDD</color>
                <default>true</default>
                <label>Edit</label>
            </value>
            <value>
                <fullName>Read</fullName>
                <color>#CC6600</color>
                <label>Read</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>