force-app/main/default/objects/TASKRAY__trContributor__c/fields/TASKRAY__User__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TaskRay_Contributors</relationshipName>
    <type>Lookup</type>
</CustomField>