force-app/main/default/objects/TASKRAY__trContributor__c/validationRules/TASKRAY__Require_User_Or_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>TASKRAY__Require_User_Or_Group</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TASKRAY__User__c) &amp;&amp; ISBLANK(TASKRAY__GroupId__c)</errorConditionFormula>
    <errorMessage>Team members must be associated with a User or Group Id.</errorMessage>
</ValidationRule>