force-app/main/default/objects/TASKRAY__trContributor__c/listViews/TASKRAY__All.listView-meta.xml
<ListView>
    <fullName>TASKRAY__All</fullName>
    <columns>NAME</columns>
    <columns>TASKRAY__Project__c</columns>
    <columns>TASKRAY__UserOrGroupId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All TaskRay Team Members</label>
</ListView>